--- a/video-edit1.html
+++ b/video-edit1.html
@@ -194,7 +194,7 @@
                                 </li> 
                             </ul>
 
-                            <div class="content-item m-top40">
+                            <div class="content-item edit1-item m-top40">
                                 <div class="edit-title font-IBM">"원하는대로 자막을 편집해보세요 !"</div>
                                 <div class="content-item edit-content flex wrap justify-center m-top20">
                                     <!-- 자막 편집 -->
