--- a/video-edit1.html
+++ b/video-edit1.html
@@ -161,17 +161,17 @@
 
                                 <ul class="controls">
                                     <li class="controls-item">
-                                        <button type="button" class="controlsBtn">
+                                        <button type="button" class="controlsBtn refreshBtn">
                                             <img src="img/refresh-icon.svg" alt="새로고침 아이콘"> 새로고침
                                         </button>
                                     </li>
                                     <li class="controls-item">
-                                        <button type="button" class="controlsBtn">
+                                        <button type="button" class="controlsBtn backBtn">
                                             <img src="img/back-icon.svg" alt="뒤로 아이콘"> 뒤로
                                         </button>
                                     </li>
                                     <li class="controls-item">
-                                        <button type="button" class="controlsBtn">
+                                        <button type="button" class="controlsBtn nextBtn">
                                             <img src="img/next-icon.svg" alt="앞으로 아이콘"> 앞으로
                                         </button>
                                     </li>
@@ -196,7 +196,7 @@
 
                             <div class="content-item edit1-item m-top40">
                                 <div class="edit-title font-IBM">"원하는대로 자막을 편집해보세요 !"</div>
-                                <div class="content-item edit-content flex wrap justify-center m-top20">
+                                <div class="content-item edit-content flex wrap m-top20">
                                     <!-- 자막 편집 -->
                                     <div class="subtitle-wrap">
                                         <!-- 편집 선택 박스 -->
@@ -250,7 +250,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="number-container">
-                                                        <div class="number-wrap">
+                                                        <div class="number-wrap w-fit">
                                                             <label class="none">폰트 사이즈</label>
                                                             <input class="number-input" type="number" placeholder="16">
                                                             <button class="downBtn numberBtn"> - </button>
@@ -345,7 +345,7 @@
                                                 </ul>
 
                                                 <div class="word-wrap">
-                                                    <span class="word" data-index="1">안녕하세요, </span>
+                                                    <span class="word" data-index="1">안녕하세요,</span>
                                                     <span class="word" data-index="2">여러분!</span>
                                                     <span class="word" data-index="3">오늘은</span>
                                                     <span class="word" data-index="4">자막</span>
@@ -353,6 +353,90 @@
                                                     <span class="word" data-index="6">변경</span>
                                                     <span class="word" data-index="7">기능을</span>
                                                     <span class="word" data-index="8">소개합니다.</span>
+                                                    <span class="word" data-index="9">바이럴을</span>
+                                                    <span class="word" data-index="10">활용하여</span>
+                                                    <span class="word" data-index="11">여러분만의</span>
+                                                    <span class="word" data-index="12">개성있는</span>
+                                                    <span class="word" data-index="13">숏폼을</span>
+                                                    <span class="word" data-index="14">제작해보세요.</span>
+                                                    <span class="word" data-index="15">긴 영상도</span>
+                                                    <span class="word" data-index="16">클릭</span>
+                                                    <span class="word" data-index="17">한</span>
+                                                    <span class="word" data-index="18">번으로</span>
+                                                    <span class="word" data-index="19">빠르게</span>
+                                                    <span class="word" data-index="20">영상을</span>
+                                                    <span class="word" data-index="21">만들</span>
+                                                    <span class="word" data-index="22">수</span>
+                                                    <span class="word" data-index="23">있습니다.</span>
+                                                    <span class="word" data-index="24">안녕하세요,</span>
+                                                    <span class="word" data-index="25">여러분!</span>
+                                                    <span class="word" data-index="26">오늘은</span>
+                                                    <span class="word" data-index="27">자막</span>
+                                                    <span class="word" data-index="28">색상</span>
+                                                    <span class="word" data-index="29">변경</span>
+                                                    <span class="word" data-index="30">기능을</span>
+                                                    <span class="word" data-index="31">소개합니다.</span>
+                                                    <span class="word" data-index="32">바이럴을</span>
+                                                    <span class="word" data-index="33">활용하여</span>
+                                                    <span class="word" data-index="34">여러분만의</span>
+                                                    <span class="word" data-index="35">개성있는</span>
+                                                    <span class="word" data-index="36">숏폼을</span>
+                                                    <span class="word" data-index="37">제작해보세요.</span>
+                                                    <span class="word" data-index="38">긴 영상도</span>
+                                                    <span class="word" data-index="39">클릭</span>
+                                                    <span class="word" data-index="40">한</span>
+                                                    <span class="word" data-index="41">번으로</span>
+                                                    <span class="word" data-index="42">빠르게</span>
+                                                    <span class="word" data-index="43">영상을</span>
+                                                    <span class="word" data-index="44">만들</span>
+                                                    <span class="word" data-index="45">수</span>
+                                                    <span class="word" data-index="46">있습니다.</span>
+                                                    <span class="word" data-index="47">안녕하세요,</span>
+                                                    <span class="word" data-index="48">여러분!</span>
+                                                    <span class="word" data-index="49">오늘은</span>
+                                                    <span class="word" data-index="50">자막</span>
+                                                    <span class="word" data-index="51">색상</span>
+                                                    <span class="word" data-index="52">변경</span>
+                                                    <span class="word" data-index="53">기능을</span>
+                                                    <span class="word" data-index="54">소개합니다.</span>
+                                                    <span class="word" data-index="55">바이럴을</span>
+                                                    <span class="word" data-index="56">활용하여</span>
+                                                    <span class="word" data-index="57">여러분만의</span>
+                                                    <span class="word" data-index="58">개성있는</span>
+                                                    <span class="word" data-index="59">숏폼을</span>
+                                                    <span class="word" data-index="60">제작해보세요.</span>
+                                                    <span class="word" data-index="61">긴 영상도</span>
+                                                    <span class="word" data-index="62">클릭</span>
+                                                    <span class="word" data-index="63">한</span>
+                                                    <span class="word" data-index="64">번으로</span>
+                                                    <span class="word" data-index="65">빠르게</span>
+                                                    <span class="word" data-index="66">영상을</span>
+                                                    <span class="word" data-index="67">만들</span>
+                                                    <span class="word" data-index="68">수</span>
+                                                    <span class="word" data-index="69">있습니다.</span>
+                                                    <span class="word" data-index="71">안녕하세요,</span>
+                                                    <span class="word" data-index="72">여러분!</span>
+                                                    <span class="word" data-index="73">오늘은</span>
+                                                    <span class="word" data-index="74">자막</span>
+                                                    <span class="word" data-index="75">색상</span>
+                                                    <span class="word" data-index="76">변경</span>
+                                                    <span class="word" data-index="77">기능을</span>
+                                                    <span class="word" data-index="78">소개합니다.</span>
+                                                    <span class="word" data-index="79">바이럴을</span>
+                                                    <span class="word" data-index="80">활용하여</span>
+                                                    <span class="word" data-index="81">여러분만의</span>
+                                                    <span class="word" data-index="82">개성있는</span>
+                                                    <span class="word" data-index="83">숏폼을</span>
+                                                    <span class="word" data-index="84">제작해보세요.</span>
+                                                    <span class="word" data-index="85">긴 영상도</span>
+                                                    <span class="word" data-index="86">클릭</span>
+                                                    <span class="word" data-index="87">한</span>
+                                                    <span class="word" data-index="88">번으로</span>
+                                                    <span class="word" data-index="89">빠르게</span>
+                                                    <span class="word" data-index="90">영상을</span>
+                                                    <span class="word" data-index="91">만들</span>
+                                                    <span class="word" data-index="92">수</span>
+                                                    <span class="word" data-index="93">있습니다.</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -387,6 +471,10 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                        <div class="templateBtn-wrap">
+                                            <button type="button" class="templaeteBtn" onclick="window.location.href='projectV-complete.html'">저장하기</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -400,12 +488,12 @@
                                 <div class="video-time-text flex">
                                     <span class="video-time-item start-time">00:00</span>
                                     <span class="video-time-item">/</span>
-                                    <span class="video-time-item">00:21</span>
+                                    <span class="video-time-item length-time">00:21</span>
                                 </div>
                                 <div class="control-btn-wrap flex">
                                     <div class="speed-btn-container">
                                         <button class="speedBtn reprodctBtn flex" type="button">
-                                            <img src="img/edit/speed-btn.svg" alt="배속 버튼 아이콘">1.0배속
+                                            <img src="img/edit/speed-btn.svg" alt="배속 버튼 아이콘">1.0 배속
                                         </button>
                                     </div>
                                     <div class="reprodct-btn-container">
@@ -439,6 +527,24 @@
                 </section>
             </div>
         </main>
+
+        <!-- 새로고침 클릭 확인 모달창 hide-pop -->
+        <div class="refresh-check-pop pop-wrap hide-pop">
+            <div class="pop-inner">
+                <p class="pop-text">
+                    초기화 하시겠습니까?
+                    <span class="pop-text-caption">초기화를 진행하면 수정 중인 모든 스타일 적용이 취소됩니다.</span>
+                </p>
+                <div class="popBtn-wrap">
+                    <div class="popBtn01 popBtn-item">
+                        <button class="noBtn" type="button">취소하기</button>
+                    </div>
+                    <div class="popBtn02 popBtn-item ">
+                        <button class="yesBtn" type="button">초기화하기</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <footer id="footer" class="footer">
             <div class="content">
@@ -712,6 +818,27 @@
                 } else {
                     img.src = "img/edit/play-btn.svg"; // 재생 버튼 이미지로 변경
                 }
+            });
+
+
+
+            //--- 모달 팝업
+            // 삭제 버튼 클릭 시, 삭제 확인 모달 열기
+            document.querySelectorAll('.refreshBtn').forEach(button => {
+                button.addEventListener('click', function() {
+                    document.querySelector('.refresh-check-pop').classList.remove('hide-pop');
+                });
+            });
+
+            // 삭제 확인 모달에서 '아니오' 버튼 클릭 시 삭제 로직 실행
+            document.querySelector('.refresh-check-pop .noBtn').addEventListener('click', function() {
+                // 모달 닫기
+                document.querySelector('.refresh-check-pop').classList.add('hide-pop');
+            });
+
+            // 삭제 확인 모달에서 '아니오' 버튼 클릭 시 모달 닫기
+            document.querySelector('.refresh-check-pop .noBtn').addEventListener('click', function() {
+                document.querySelector('.refresh-check-pop').classList.add('hide-pop');
             });
         });
     </script>
