--- a/video-edit1.html
+++ b/video-edit1.html
@@ -442,7 +442,7 @@
                                         </div>
                                     </div>
                                     <!-- 미리보기 박스 -->
-                                    <div class="preview-wrap template-wrap">
+                                    <div class="edit-preview preview-wrap">
                                         <div class="template-box">
                                             <div class="templaete-img template-fit">
                                                 <div class="mockup-img">
@@ -456,15 +456,10 @@
                                                             <img class="exampleImg ratio16-img" src="img/template/example-img-16_9.png" alt="레이아웃 예시 이미지">
                                                         </div>
                                                         <div class="mock-subTitle mockup-contentImg">
-                                                            <div class="user-subtitle">
-                                                                <span class="word">안녕하세요, </span>
+                                                            <div class="user-subtitle short-subtitle">
+                                                                <span class="word">안녕하세요,</span>
                                                                 <span class="word">여러분!</span>
                                                                 <span class="word">오늘은</span>
-                                                                <span class="word">자막</span>
-                                                                <span class="word">색상</span>
-                                                                <span class="word">변경</span>
-                                                                <span class="word">기능을</span>
-                                                                <span class="word">소개합니다.</span>
                                                             </div>
                                                         </div>
                                                     </div>
