--- a/video-edit1.html
+++ b/video-edit1.html
@@ -206,13 +206,13 @@
                                                 <h4 class="subtitle-edit-title">자막 효과</h4>
                                                 <ul class="subtitle-effect-wrap wrap justify-start m-top10">
                                                     <li class="subtitle-effect-item">
-                                                        <button type="button" class="effectBtn b-show">
+                                                        <button type="button" class="effectBtn">
                                                             <img src="img/edit/none-icon.svg" alt="효과없음">
                                                         </button>
                                                         <span class="effectBtn-text">효과없음</span>
                                                     </li>
                                                     <li class="subtitle-effect-item">
-                                                        <button type="button" class="effectBtn">
+                                                        <button type="button" class="effectBtn b-show">
                                                             <img src="img/edit/bounce-icon.svg" alt="바운스">
                                                         </button>
                                                         <span class="effectBtn-text">바운스</span>
@@ -230,7 +230,7 @@
                                                 <h4 class="subtitle-edit-title">효과 색상</h4>
                                                 <div class="picker-container">
                                                     <label for="effect-color-picker" class="none">자막 색상 선택</label>
-                                                    <input class="color-picker" type="color" id="effect-color-picker" name="color">
+                                                    <input class="color-picker" type="color" id="effect-color-picker" name="color" value="#2fff00">
                                                     <!-- React Color 라이브러리 사용?-->
                                                 </div>
                                             </div>
@@ -264,7 +264,7 @@
                                                 <h4 class="subtitle-edit-title">폰트 컬러</h4>
                                                 <div class="picker-container">
                                                     <label for="font-color-picker" class="none">자막 색상 선택:</label>
-                                                    <input class="color-picker" type="color" id="font-color-picker" name="color">
+                                                    <input class="color-picker font-color-picker" type="color" id="font-color-picker" name="color" value="#ffe100">
                                                     <!-- React Color 라이브러리 사용?-->
                                                 </div>
                                             </div>
@@ -449,17 +449,21 @@
                                                     <img class="img-item" src="img/template/iphone-mockup.png" alt="아이폰 목업">
                                                     <!-- 제목, 선택한 레이아웃 비율, 자막 컨텐츠 -->
                                                     <div class="mockup-content">
-                                                        <div class="mock-title mockup-contentImg">
+                                                        <div class="mock-title mockup-content-item">
                                                             <div class="user-title">로우하이 -- vs -- 큐지</div>
                                                         </div>
-                                                        <div class="mock-ratio mockup-contentImg">
-                                                            <img class="exampleImg ratio16-img" src="img/template/example-img-16_9.png" alt="레이아웃 예시 이미지">
+                                                        <div class="mock-ratio mockup-content-item mockup-content-video ratio16-item">
+                                                            <!-- !!!!! 레이아웃 비율에 따라 값 변경  >>
+                                                            16:9 = ratio16-item / 1:1 = ratio1-item / 9:16 = ratio9-item 
+                                                            -->
+                                                            <video class="user-video" src="img/videos/sample-video.mp4" autoplay muted loop></video>
                                                         </div>
-                                                        <div class="mock-subTitle mockup-contentImg">
-                                                            <div class="user-subtitle short-subtitle">
-                                                                <span class="word">안녕하세요,</span>
+                                                        <div class="mock-subTitle mockup-content-item">
+                                                            <div class="user-subtitle long-subtitle font-color">
+                                                            <!-- 짧은 자막 시 short-subtitle / 긴 자막 시 long-subtitle / 폰트 컬러 선택 시 font-color -->
+                                                                <span class="word stokeWrod effectWrod">안녕하세요,</span>
+                                                                <!-- 바운스 효과 시 effectWrod / 테두리 있음 시 stokeWrod -->
                                                                 <span class="word">여러분!</span>
-                                                                <span class="word">오늘은</span>
                                                             </div>
                                                         </div>
                                                     </div>
