--- a/video-edit1.html
+++ b/video-edit1.html
@@ -228,11 +228,24 @@
                                             <!-- 효과색상 -->
                                             <div class="edit-item m-top20 flex wrap">
                                                 <h4 class="subtitle-edit-title">효과 색상</h4>
-                                                <div class="picker-container">
+                                                <div class="select-container">
+                                                    <div class="select-wrap">
+                                                        <div class="select-view">
+                                                            하얀색 <img class="drop-icon" src="img/drop-icon.svg" alt="드롭 아이콘">
+                                                        </div>
+                                                        <div class="select selectNone">
+                                                            <!-- 선택되는 값 effectWrod 클래스 컬러 변경 -->
+                                                            <div class="option">하얀색</div>
+                                                            <div class="option">노란색</div>
+                                                            <div class="option">빨간색</div>
+                                                            <div class="option m-btm0">연두색</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- <div class="picker-container">
                                                     <label for="effect-color-picker" class="none">자막 색상 선택</label>
                                                     <input class="color-picker" type="color" id="effect-color-picker" name="color" value="#2fff00">
-                                                    <!-- React Color 라이브러리 사용?-->
-                                                </div>
+                                                </div> -->
                                             </div>
                                             <!-- 폰트 -->
                                             <div class="edit-item m-top20 flex wrap">
@@ -262,11 +275,24 @@
                                             <!-- 폰트 컬러 -->
                                             <div class="edit-item m-top20 flex wrap">
                                                 <h4 class="subtitle-edit-title">폰트 컬러</h4>
-                                                <div class="picker-container">
+                                                <div class="select-container">
+                                                    <div class="select-wrap">
+                                                        <div class="select-view">
+                                                            하얀색 <img class="drop-icon" src="img/drop-icon.svg" alt="드롭 아이콘">
+                                                        </div>
+                                                        <div class="select selectNone">
+                                                            <!-- 선택되는 값 font-color 클래스 컬러 변경 -->
+                                                            <div class="option">하얀색</div>
+                                                            <div class="option">노란색</div>
+                                                            <div class="option">빨간색</div>
+                                                            <div class="option m-btm0">연두색</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- <div class="picker-container">
                                                     <label for="font-color-picker" class="none">자막 색상 선택:</label>
                                                     <input class="color-picker font-color-picker" type="color" id="font-color-picker" name="color" value="#ffe100">
-                                                    <!-- React Color 라이브러리 사용?-->
-                                                </div>
+                                                </div> -->
                                             </div>
                                             <!-- 테두리 -->
                                             <div class="edit-item m-top20 flex wrap">
@@ -337,9 +363,18 @@
                                                     <li class="color-change edit-menu-item">
                                                         <!-- 기본 컬러칩 (색상 선택을 표시) -->
                                                         <div class="color-panel">
-                                                            <label for="color-picker" class="none">자막 색상 선택:</label>
-                                                            <input class="color-picker edit-picker" type="color" id="color-picker" name="color">
-                                                            <!-- React Color 라이브러리 사용?-->
+                                                            <ul id="color-picker" class="color-picker edit-picker flex">
+                                                                <li class="lightGreen-chip color-chip"></li>
+                                                                <li class="red-chip color-chip"></li>
+                                                                <li class="yellow-chip color-chip"></li>
+                                                                <li class="white-chip color-chip"></li>
+                                                            </ul>
+                                                            <!--
+                                                                <div class="color-panel">
+                                                                    <label for="color-picker" class="none">자막 색상 선택:</label>
+                                                                    <input class="color-picker edit-picker" type="color" id="color-picker" name="color"> 
+                                                                </div>
+                                                            -->
                                                         </div>
                                                     </li>
                                                 </ul>
