--- a/projectV-complete.html
+++ b/projectV-complete.html
@@ -488,7 +488,28 @@
                                         <div class="template-fit">
                                             <div class="mockup-img">
                                                 <img class="img-item" src="img/template/iphone-mockup.png" alt="아이폰 목업">
-                                                <div class="mockup-content">
+                                                    <!-- 제목, 선택한 레이아웃 비율, 자막 컨텐츠 -->
+                                                    <div class="mockup-content">
+                                                        <div class="mock-title mockup-contentImg">
+                                                            <div class="user-title">로우하이 -- vs -- 큐지</div>
+                                                        </div>
+                                                        <div class="mock-ratio mockup-contentImg">
+                                                            <img class="exampleImg ratio16-img" src="img/template/example-img-16_9.png" alt="레이아웃 예시 이미지">
+                                                        </div>
+                                                        <div class="mock-subTitle mockup-contentImg">
+                                                            <div class="user-subtitle">
+                                                                <span class="word">안녕하세요, </span>
+                                                                <span class="word">여러분!</span>
+                                                                <span class="word">오늘은</span>
+                                                                <span class="word">자막</span>
+                                                                <span class="word">색상</span>
+                                                                <span class="word">변경</span>
+                                                                <span class="word">기능을</span>
+                                                                <span class="word">소개합니다.</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                <!-- <div class="mockup-content">
                                                     <div class="mock-title mockup-contentImg">
                                                         <img class="titleImg" src="img/template/example-title.svg" alt="레이아웃 예시 타이틀">
                                                     </div>
@@ -498,7 +519,7 @@
                                                     <div class="mock-subTitle mockup-contentImg">
                                                         <img class="sub-titleImg" src="img/template/example-subtitle.svg" alt="레이아웃 예시 타이틀">
                                                     </div>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
